--- a/Course3/workshop.abridged/index.html
+++ b/Course3/workshop.abridged/index.html
@@ -54,6 +54,10 @@
 
     <footer>
     </footer>
+    
+    <script>
+    </script>
+
 </body>
 <script type="text/javascript" src="data/book-data.js"></script>
 <script src="./js/jquery-2.1.4.min.js"></script>
