--- a/Course3/workshop.abridged/index.html
+++ b/Course3/workshop.abridged/index.html
@@ -17,34 +17,37 @@
         </nav>
     </header>
     <main>
+        <div id="undo" style="display:block; width:250px; margin-bottom:20px;" class="k-button k-primary btn-add-book">新增書籍</div>
         <div class="uk-container align-center">
             <div class="uk-card uk-width-1-3 uk-text-left">
-                <ul class="fieldlist">
-                    <li>
-                        <img class="book-image" src="image/database.jpg" alt="">
-                    </li>
-                    <li>
-                        <label>圖書類別</label>
-                        <select id="book_category" style="width: 100%;">
-                        </select>
-                    </li>
-                    <li>
-                        <label>書名</label>
-                        <input id="book_name" type="text" class="k-textbox" style="width: 100%;" />
-                    </li>
-                    <li>
-                        <label>作者</label>
-                        <input id="book_author" type="text" class="k-textbox" style="width: 100%;" />
-                    </li>
-                    <li>
-                        <label>購買日期</label>
-                        <input id="bought_datepicker" value="10/10/2011" title="datepicker" style="width: 100%" />
-                        <!-- <input type="text" class="k-textbox" style="width: 100%;" /> -->
-                    </li>
-                    <li class="uk-text-right">
-                        <button class="k-button k-primary btn-add-book">新增</button>
-                    </li>
-                </ul>
+                <div id="window">
+                    <ul class="fieldlist">
+                        <li>
+                            <img class="book-image" src="image/database.jpg" alt="">
+                        </li>
+                        <li>
+                            <label>圖書類別</label>
+                            <select id="book_category" style="width: 100%;">
+                            </select>
+                        </li>
+                        <li>
+                            <label>書名</label>
+                            <input id="book_name" type="text" class="k-textbox" style="width: 100%;" />
+                        </li>
+                        <li>
+                            <label>作者</label>
+                            <input id="book_author" type="text" class="k-textbox" style="width: 100%;" />
+                        </li>
+                        <li>
+                            <label>購買日期</label>
+                            <input id="bought_datepicker" value="10/10/2011" title="datepicker" style="width: 100%" />
+                            <!-- <input type="text" class="k-textbox" style="width: 100%;" /> -->
+                        </li>
+                        <li class="uk-text-right">
+                            <button class="k-button k-primary btn-add-book">新增</button>
+                        </li>
+                    </ul>
+                </div>
             </div>
             <div id="book_grid">
             </div>
