--- a/Course3/workshop.abridged/index.html
+++ b/Course3/workshop.abridged/index.html
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-        <div id="undo" style="display:block; width:250px; margin-bottom:20px;" class="k-button k-primary btn-add-book">新增書籍</div>
+        <div id="undo" style="display:block; width:250px; margin: 0px auto; margin-bottom:20px;" class="k-button k-primary btn-add-book">新增書籍</div>
         <div class="uk-container align-center">
             <div class="uk-card uk-width-1-3 uk-text-left">
                 <div id="window">
@@ -44,7 +44,7 @@
                             <!-- <input type="text" class="k-textbox" style="width: 100%;" /> -->
                         </li>
                         <li class="uk-text-right">
-                            <button class="k-button k-primary btn-add-book">新增</button>
+                            <button class="k-button k-primary btn-add-book" id="add_book">新增</button>
                         </li>
                     </ul>
                 </div>
