--- a/Course3/workshop.abridged/index.html
+++ b/Course3/workshop.abridged/index.html
@@ -20,7 +20,7 @@
         <div id="undo" style="display:block; width:250px; margin: 0px auto; margin-bottom:20px;" class="k-button k-primary btn-add-book">新增書籍</div>
         <div class="uk-container align-center">
             <div class="uk-card uk-width-1-3 uk-text-left">
-                <div id="window">
+                <div id="window" style="display: none">
                     <ul class="fieldlist">
                         <li>
                             <img class="book-image" src="image/database.jpg" alt="">
